2017-08-31         Arnold D. Robbins     <arnold@skeeve.com>

	* cstr100: Put .ND macro into effect.

2017-08-31         Michael Parson        <mparson@bl.org>

	* cstr100: Update references to be in standalone form.

1981-04-02         Brian W. Kernighan    <bwk@research.bell-labs.com>

	* cstr100: Document finished.
	* cprog.mac: Macros needed for formatting.
	* ChangeLog: Created.