@@ -1,5 +1,10 @@
 2017-08-31         Arnold D. Robbins     <arnold@skeeve.com>
 
+	* tmac.s: Change absolute paths to relative ones.
+	Fix an numeric register reference that groff complains about it.
+
+2017-08-31         Arnold D. Robbins     <arnold@skeeve.com>
+
 	* tmac.s, tmac.scover, tmac.sdisp, tmac.skeep,
 	tmac.srefs: Copied from V7 distribution tape,
 	dated January, 1979.
